# PM-Saya

./: .gitignore  CMakeLists.txt  README.md  dllmain.cpp  version.h  version.rc  xmake.lua
.github/workflows/: deploy.yml  test-deploy.yml
Scripts/: DataTable.lua  DataTableParser.lua  PlayerPlaneDataTable.lua  Settings.lua  SkinDataTable.lua  main.lua  utils.lua
build_scripts/: clear_xmake_cache.bat  generate_build_files.bat
include/Loader/: PalBlueprintModLoader.h  PalBuildingModLoader.h  PalEnumLoader.h  PalItemModLoader.h  PalLanguageModLoader.h  PalMainLoader.h  PalModLoaderBase.h  PalRawTableLoader.h
include/Loader/Spawner/: PalSpawnGroupListInfo.h  SpawnerInfo.h
include/SDK/: PalSignatures.h  StaticClassStorage.h  UnrealOffsets.h
include/SDK/Classes/: AMonoNPCSpawner.h  APalSpawnerStandard.h  Async.h  KismetGuidLibrary.h  KismetRenderingLibrary.h  KismetSystemLibrary.h  PalItemIDManager.h  PalMasterDataTables.h  PalNoteData.h  PalNoteDataAsset.h  PalStaticItemDataTable.h  PalUtility.h  TPersistentObjectPtr.h  TSoftObjectPtr.h  UCompositeDataTable.h  (+4 more)
include/Utility/: Config.h  EnumHelpers.h  JsonHelpers.h  Logging.h
src/: dllmain.cpp
src/Loader/: PalAppearanceModLoader.cpp  PalBlueprintModLoader.cpp  PalBuildingModLoader.cpp  PalEnumLoader.cpp  PalItemModLoader.cpp  PalLanguageModLoader.cpp  PalMainLoader.cpp  PalModLoaderBase.cpp  PalMonsterModLoader.cpp  PalRawTableLoader.cpp  PalSkinModLoader.cpp
src/SDK/: PalSignatures.cpp  StaticClassStorage.cpp  UnrealOffsets.cpp
src/Utility/: Config.cpp  DataTableHelper.cpp  EnumHelpers.cpp  JsonHelpers.cpp
website/: docusaurus.config.ts  package-lock.json  package.json
website/docs/: configuration.md  features.md  gettingstarted.md  installation.mdx  installing-mods.md  resources.md
(+101 files in other folders)
